Bug 132470 - UI: Tab of visible sheet looks the same as other selected tabs
Summary: UI: Tab of visible sheet looks the same as other selected tabs
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.3.0.4 release
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:7.3.0 target:7.2.5
Keywords: bibisectNotNeeded, regression
: 123269 (view as bug list)
Depends on:
Blocks: Sheet-Tabs-Bar
  Show dependency treegraph
 
Reported: 2020-04-27 17:58 UTC by Gilward Kukel
Modified: 2021-12-06 13:28 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
tabs in macOS (8.93 KB, image/png)
2020-04-30 21:23 UTC, Roman Kuznetsov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gilward Kukel 2020-04-27 17:58:38 UTC
Description:
Active tab looks the same as inactive selected tabs. You do not know which tab is active.

Steps to Reproduce:
1. select more than one sheet in Calc (for example with Ctrl+Click)


Actual Results:
Active tab looks the same as inactive selected tabs. 

Expected Results:
Active tab should look different than inactive selected tabs. Its name used to be bold.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 6.4.3.2 (x64)
Build ID: 747b5d0ebf89f41c860ec2a39efd7cb15b54f2d8
CPU threads: 4; OS: Windows 10.0 Build 18362; UI render: default; VCL: win;
Comment 1 Roman Kuznetsov 2020-04-30 21:23:59 UTC
Created attachment 160155 [details]
tabs in macOS
Comment 2 Roman Kuznetsov 2020-04-30 21:25:26 UTC Comment hidden (obsolete)
Comment 3 Gilward Kukel 2020-04-30 22:46:56 UTC
(In reply to Roman Kuznetsov from comment #2)

> Can you attach some screenshot?
Your screenshot is good enough. Sheets 1 to 3 are selected but their tabs all look the same. So you do not know which of these sheets is active (visible). In earlier versions, the name of the visible sheet was bold (as you can see here: https://help.libreoffice.org/6.4/en-US/text/scalc/guide/multi_tables.html?DbPAR=CALC#bm_id3150769 ).
 
> And please write here info from Help->About dialog

I did.
Comment 4 QA Administrators 2020-05-01 03:42:58 UTC Comment hidden (obsolete)
Comment 5 Buovjaga 2020-08-24 19:51:45 UTC
Yep, let's set to NEW
Comment 6 Timur 2021-04-01 08:18:12 UTC
Regression from bug 124572.
Comment 7 Timur 2021-04-01 08:48:21 UTC
*** Bug 123269 has been marked as a duplicate of this bug. ***
Comment 8 Mike Kaganski 2021-05-10 13:00:57 UTC
This has stated the problem, and mentioned how it was different before (see comment 3), but has no suggestion how to fix. Namely, do you suggest to restore writing current tab name in bold?

https://git.libreoffice.org/core/+/fad98c8641342a77241124dd98e0cb781daef4ad has explicitly changed that:

> tdf#124572 TabBar new look, protected icon, width and height
> 
> This is the first try of a new TabBar look - borders have been
> removed, *selected tab doesn't change the font to bold*, adjustment
> to the selected tab line.

as a side note, it didn't remove the old comment stating this:

> // actual page is drawn using a bold font

If the UX decision is to restore the bold behavior, then the code pointer is reverting the related bits in the mentioned commit. Otherwise, it depends on the wanted solution.
Comment 9 andreas_k 2021-05-10 14:09:58 UTC
Another office suite use for highlighting colored strings.

https://cdn.ablebits.com/_img-blog/hide-sheets/hide-sheets-excel.png
Comment 10 Heiko Tietze 2021-05-13 10:16:08 UTC
We discussed the topic in the design meeting and recommend to make the draw the caption of the active tab in bold, again. Sascha was also pondering over a border but I don't get it. Border as in frame around the whole tab?
Comment 11 S.Zosgornik 2021-05-13 13:41:56 UTC
(In reply to Heiko Tietze from comment #10)
> Sascha was also pondering over a border but I don't get it.
> Border as in frame around the whole tab?

Yes, frame similar to the cell borders for each selected sheet-tab
Comment 12 Justin L 2021-11-20 19:09:09 UTC
(In reply to Heiko Tietze from comment #10)
> We discussed the topic in the design meeting and recommend to make the draw
> the caption of the active tab in bold, again.
Proposed fix at http://gerrit.libreoffice.org/c/core/+/125601
Comment 13 Commit Notification 2021-11-22 09:31:03 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fbda2f3b7b47021a140cbfd3288aa7de1b42e1fd

tdf#132470 tabbar: revert back to bold font on visible tab

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Justin L 2021-11-22 10:31:03 UTC
(In reply to S.Zosgornik from comment #11)
> > Sascha was also pondering over a border
> 
> Yes, frame similar to the cell borders for each selected sheet-tab
I'll leave the bug open in case this needs to be implemented by someone.
Comment 15 Mike Kaganski 2021-11-22 10:43:45 UTC
(In reply to Justin L from comment #14)

Please do not. Please close this one as fixed, and suggest interested users to file a follow-up (if needed) to track border. Otherwise, it fails "one problem per one issue" principle, and referring to this bug # would not tell exactly which specific change is meant.
Comment 16 Commit Notification 2021-11-22 13:28:17 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/13c0794e2040e3a29801a56c6eb9835f364f8f27

tdf#132470 tabbar: revert back to bold font on visible tab

It will be available in 7.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Christian Lohmaier 2021-12-06 13:28:48 UTC
7.2.4 was a hotfix release, updating target in status-whiteboard