tdf#132470 tabbar: revert back to bold font on visible tab

This is a partial regression to LO 6.3's
commit fad98c8641342a77241124dd98e0cb781daef4ad.

The current sheet is always selected, which is fairly
distinctive. However, it is possible to select
multiple sheets, and the current one should be
distinctly marked to differentiate it from
the other selected sheets.

Change-Id: Ib160535cccebcfcabee94d17e5941cc3cd23bb15
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/125601
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>